--- a/style.css
+++ b/style.css
@@ -47,6 +47,12 @@
 
 /* General styles */
 
+html{
+    scroll-behavior: smooth;
+}
+
+
+
 body{
     background:var(--clr-light);
     color: var(--clr-dark);
@@ -144,9 +150,121 @@ h3{ font-size: var(--fs-h3)}
 
 
 /* header */
-nav{
-    display: none;
+
+header{
+    display:flex;
+    justify-content: space-between;
+    padding: 1em;
 }
+
+.logo{
+    max-width: 100px;
+    
+    
+}
+/* navigation */
+.nav {
+    position: fixed;
+    background: var(--clr-dark);
+    color: var(--clr-light);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
+}
+
+
+
+.nav__list{
+    list-style: none;
+    display:flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin:0;
+    padding: 0;
+}
+
+.nav__link{
+    color:inherit;
+    font-weight: var(-var(--fw-bold));
+    font-size: var(--fs-h2);
+    text-decoration: none;
+}
+
+.nav__link:hover{
+    color:var(--clr-accent);
+}
+
+
+.nav-toggle{
+    padding: 0.25;
+    background: transparent;
+    border: 0;
+    cursor:pointer;
+    position: absolute;
+    right:2em;
+    top: 2em;
+    z-index: 1000;
+}
+
+/* nav open bar */
+.nav-open .nav{
+    transform: translateX(0);
+}
+
+.nav-open .nav-toggle {
+    position: fixed;
+}
+
+
+.nav-open .hamburger{
+    transform: rotate(.625turn);
+}
+
+.nav-open .hamburger::before{
+    transform: rotate(90deg) translateX(-6px);
+}
+
+
+.nav-open .hamburger::after{
+    opacity: 0;
+}
+
+
+.hamburger {
+    display: block;
+    position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+    background: var(--clr-accent);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transform 250ms ease-in-out;
+}
+
+
+.hamburger::before,
+.hamburger::after{
+    content: '';
+    position: absolute;
+    left:0;
+    right:0;
+}
+
+
+.hamburger::before{ top:6px; }
+.hamburger::after{bottom: 6px;}
+
 
 /* Intro section */
 .intro{
@@ -208,9 +326,9 @@ nav{
     background-color:var(--clr-dark);
 /*    background-image: url(img/backgroundskill1.jpeg);*/
 /*    background-image: url(img/backgroundskill4.jpeg);*/
-/*    background-image: url(img/backgroudskill3.jpeg);*/
+    background-image: url(img/backgroudskill3.jpeg);
 /*        background-image: url(img/backgroundskill6.png);*/
-    background-image: url(img/skillbackground.jpeg);
+/*    background-image: url(img/skillbackground.jpeg);*/
 
     background-size:cover;
 /*    background-blend-mode: multiply; */
